# entrega_m2

./: README.md  pyproject.toml  requirements.txt  tox.ini
todos/src/: todos.html  todos.py
todos/tests/: test_list.py
todos/tests/integracion/: test_integral.py
todos/tests/unit/: fun_create_list.py  test_fun_add_task.py
