[tool.poetry]
name = "todos"
version = "0.1.0"
description = "Entrega del modulo II. Creacion de un to_do list."
authors = ["Valeria Hernandez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
